<!--
  ~ This file is part of Road Trip Tracker.
  ~
  ~ Road Trip Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Road Trip Tracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Road Trip Tracker.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Road Trip Tracker</string>

    <!--
        Home Fragment
    -->

    <string name="home_fragment_title">Home</string>
    <string name="home_fragment_start_route_button">Start New Route</string>
    <string name="home_fragment_profile_dialog_title">Select Profile</string>
    <string name="home_fragment_current_location_title">Current Location</string>
    <string name="home_fragment_no_route_available_message">Latest route not available</string>

    <string name="home_fragment_open_route_detail_action_description">Open route detail</string>
    <string name="home_fragment_open_fullscreen_map_action_description">Open fullscreen route map</string>

    <!-- History Fragment -->
    <string name="history_fragment_title">History</string>

    <!-- Settings Fragment -->
    <string name="preference_fragment_title">Settings</string>

    <!-- Profile List Preference Fragment -->
    <string name="profile_list_prefernece_fragment_title">Select Profile</string>

    <!-- Profile Preferences -->
    <string name="profile_preference_fragment_title">Profile Settings</string>

    <!--
        Route Detail Fragment
    -->

    <string name="route_detail_fragment_title">Route Detail</string>

    <string name="route_detail_stat_tab_title">Stats</string>

    <string name="route_detail_stat_distance_title">Distance</string>
    <string name="route_detail_stat_total_distance">Total</string>
    <string name="route_detail_stat_climb">Climb</string>
    <string name="route_detail_stat_max_elevation_gain">Max Climb</string>
    <string name="route_detail_stat_total_elevation_gain">Total Climb</string>

    <string name="route_detail_stat_time_title">Time</string>
    <string name="route_detail_stat_total_time">Total</string>
    <string name="route_detail_stat_active_time">Active</string>
    <string name="route_detail_stat_paused_time">Paused</string>

    <string name="route_detail_stat_speed_title">Speed</string>
    <string name="route_detail_stat_max_speed">Max</string>
    <string name="route_detail_stat_avg_speed">Avg Speed</string>
    <string name="route_detail_stat_pace">Avg Pace</string>

    <string name="route_detail_map_tab_title">Map</string>

    <string name="route_summary_list_time_title">Time</string>
    <string name="route_summary_list_distance_title">Distance</string>
    <string name="route_summary_list_avg_speed_title">Avg Speed</string>

    <string name="route_history_action_menu_delete">Delete</string>

    <string name="route_history_delete_prompt_title">Delete Selected</string>
    <string name="route_history_delete_selected_prompt_message">Are you sure you want to delete the %d selected routes?</string>

    <plurals name="route_list_selection_action_title">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <!--
        Tracking Activity
    -->

    <string name="tracking_activity_title">Tracking</string>

    <string name="tracking_stat_speed_title">@string/route_detail_stat_speed_title</string>
    <string name="tracking_stat_avg_speed_title">Avg</string>
    <string name="tracking_stat_max_speed_title">Max</string>
    <string name="tracking_stat_time_title">@string/route_detail_stat_time_title</string>
    <string name="tracking_stat_active_time_title">@string/route_detail_stat_active_time</string>
    <string name="tracking_stat_paused_time_title">@string/route_detail_stat_paused_time</string>

    <string name="tracking_stat_speed_with_unit_suffix">Speed (%s)</string>
    <string name="tracking_stat_max_speed_with_unit_suffix">Max (%s)</string>
    <string name="tracking_stat_avg_speed_with_unit_suffix">Avg (%s)</string>
    <string name="tracking_stat_total_climb_with_unit_suffix">Climb (%s)</string>
    <string name="tracking_stat_distance_with_unit_suffix">Distance (%s)</string>

    <string name="tracking_start_button_title">Start</string>
    <string name="tracking_stop_button_title">Stop</string>
    <string name="tracking_pause_button_title">Pause</string>
    <string name="tracking_resume_button_title">Resume</string>

    <string name="tracking_screen_locked">Screen Locked</string>
    <string name="tracking_screen_unlocked">Screen Unlocked</string>
    <string name="tracking_screen_locked_message">Screen input is locked, please unlock before continuing</string>

    <string name="tracking_stop_prompt_title">Stop Tracking</string>
    <string name="tracking_stop_prompt_save_button">Save</string>
    <string name="tracking_stop_prompt_discard_button">Discard</string>
    <string name="tracking_stop_prompt_cancel_button">Cancel</string>
    <string name="tracking_save_prompt_message">Would you like to save the current route?</string>
    <string name="tracking_stop_and_save_prompt_message">A route tracking session is currently in progress, would you like to save the route before continuing?</string>

    <string name="map_activity_title">Map</string>

    <string name="tracking_location_services_prompt_title">Enable Location Services</string>
    <string name="tracking_location_services_prompt_message">Location services must be enabled before tracking can be started.\n\nWould you like go to the location settings?</string>

    <!--
        Profiles
    -->

    <string name="profile_name_walking">Walking</string>
    <string name="profile_name_running">Running</string>
    <string name="profile_name_cycling">Cycling</string>
    <string name="profile_name_driving">Driving</string>
    <string name="profile_name_boating">Boating</string>
    <string name="profile_name_motorcycling">Motorcycling</string>

    <!--
        Metrics
    -->

    <string name="distance_unit_meters">meters</string>
    <string name="distance_unit_miles">miles</string>
    <string name="distance_unit_kilometers">kilometers</string>

    <string name="distance_unit_suffix_meters">mts</string>
    <string name="distance_unit_suffix_miles">mi</string>
    <string name="distance_unit_suffix_kilometers">km</string>

    <string name="speed_unit_suffix_mps">mps</string>
    <string name="speed_unit_suffix_mph">mph</string>
    <string name="speed_unit_suffix_kph">kph</string>
    <string name="speed_unit_suffix_fps">fps</string>
    <string name="speed_unit_suffix_knots">kts</string>

    <!--
        Misc Messages
    -->

    <string name="tracking_service_tracking_started_message">Route tracking service started.</string>
    <string name="tracking_service_description">Location tracking service used by the Road Trip Tracker application to log GPS location for route tracking.</string>
    <string name="error_no_location_permissions">Location permissions are required in order to enable route tracking.</string>

    <!--
        Preferences
    -->

    <string name="pref_key_current_profile">_pref_key_current_profile</string>
    <string name="pref_key_keep_screen_on">_pref_key_keep_screen_on</string>
    <string name="pref_key_map_type">_pref_key_map_type</string>
    <string name="pref_key_tracking_screen_orientation">_pref_key_tracking_screen_orientation</string>

    <string name="pref_value_map_type_normal">_pref_value_map_type_normal</string>
    <string name="pref_value_map_type_terrain">_pref_value_map_type_terrain</string>
    <string name="pref_value_map_type_satellite">_pref_value_map_type_satellite</string>
    <string name="pref_value_map_type_hybrid">_pref_value_map_type_hybrid</string>

    <string name="prefs_category_general_title">General</string>

    <string name="prefs_category_tracking_title">Tracking</string>
    <string name="prefs_keep_screen_on_title">Keep screen on</string>
    <string name="prefs_keep_screen_on_summary_on">The screen will remain on and bright while tracking is in progress</string>
    <string name="prefs_keep_screen_on_summary_off">The screen will be allowed to turn off while tracking is in progress</string>

    <string name="prefs_lock_screen_orientation_title">Lock screen orientation</string>
    <string name="prefs_lock_screen_orientation_on">The screen will be locked in the selected orientation while tracking is in progress</string>
    <string name="prefs_lock_screen_orientation_off">The screen will be free to change orientation while tracking is in progress</string>

    <string name="prefs_map_type_title">Map type</string>
    <string name="prefs_map_type_selection_dialog_title">Select map type</string>
    <string name="prefs_map_type_entry_normal">Normal</string>
    <string name="prefs_map_type_entry_terrain">Terrain</string>
    <string name="prefs_map_type_entry_satellite">Satellite</string>
    <string name="prefs_map_type_entry_hybrid">Hybrid</string>

    <string name="prefs_category_profiles_title">Profiles</string>

    <string name="prefs_category_about_title">About</string>
    <string name="prefs_about_summary">TODO: Add about information for Road Trip Tracker</string>
    <string name="prefs_version_title">Version</string>



</resources>
