<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Road Trip Tracker.
  ~
  ~ Road Trip Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Road Trip Tracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Road Trip Tracker.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/prefs_category_general_title"
        android:icon="@drawable/ic_settings_black_24p">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/prefs_map_type_selection_dialog_title"
            android:entries="@array/prefs_map_type_entries"
            android:entryValues="@array/prefs_map_type_values"
            android:key="@string/pref_key_map_type"
            android:title="@string/prefs_map_type_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:title="Profiles"
            app:iconSpaceReserved="false"
            android:summary="Change the configuration settings for tracking profiles"
            android:key="_pref_profile_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/prefs_category_tracking_title"
        android:icon="@drawable/ic_tracking_black_24p">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_keep_screen_on"
            android:summaryOff="@string/prefs_keep_screen_on_summary_off"
            android:summaryOn="@string/prefs_keep_screen_on_summary_on"
            android:title="@string/prefs_keep_screen_on_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_keep_screen_on"
            android:summaryOff="@string/prefs_lock_screen_orientation_off"
            android:summaryOn="@string/prefs_lock_screen_orientation_on"
            android:title="@string/prefs_lock_screen_orientation_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>



    <PreferenceCategory
        app:title="@string/prefs_category_about_title"
        android:icon="@drawable/ic_help_black_24p">

        <Preference
            android:selectable="false"
            android:summary="@string/prefs_about_summary"
            app:iconSpaceReserved="false"
            app:title="@string/app_name" />

        <Preference
            android:summary="0.0.1 (Beta)"
            android:title="@string/prefs_version_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>