<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trackingStats"
            type="ie.justonetech.roadtriptracker.utils.TrackingStatsFormatter" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/currentSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.currentSpeed}"

                android:textSize="36sp"
                tools:text="100 KPH" />

            <TextView
                android:id="@+id/totalDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.totalDuration}"

                android:textSize="36sp"
                tools:text="00:00:00" />

        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_speed_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_time_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/avgSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.avgSpeed}"
                tools:text="0 KPH" />

            <TextView
                android:id="@+id/maxSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.maxSpeed}"
                tools:text="0 KPH" />

            <TextView
                android:id="@+id/activeDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.activeDuration}"
                tools:text="00:00:00" />

            <TextView
                android:id="@+id/pausedDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.pausedDuration}"
                tools:text="00:00:00" />

        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_avg_speed_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_max_speed_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_active_time_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_paused_time_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />
        </TableRow>
    </TableLayout>
</layout>