<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Road Trip Tracker.
  ~
  ~ Road Trip Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Road Trip Tracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Road Trip Tracker.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trackingStats"
            type="ie.justonetech.roadtriptracker.utils.TrackingStatsFormatter" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">

        <TableRow android:layout_width="match_parent">
            <TextView
                android:id="@+id/totalDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.totalDuration}"

                android:textSize="42sp"
                tools:text="00:00:00" />

        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@string/tracking_stat_active_time_title"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                tools:text="@string/tracking_stat_time_title" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/totalDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.distance}"
                android:textSize="18sp"
                tools:text="0" />

            <TextView
                android:id="@+id/currentSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.currentSpeed}"
                android:textSize="18sp"
                tools:text="0" />

            <TextView
                android:id="@+id/totalClimb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{trackingStats.maxSpeed}"
                android:textSize="18sp"
                tools:text="0" />

        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.distanceLabel}"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                tools:text="@string/tracking_stat_distance_with_unit_suffix" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.speedLabel}"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                tools:text="@string/tracking_stat_speed_with_unit_suffix" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:text="@{trackingStats.climbLabel}"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                tools:text="@string/tracking_stat_total_climb_with_unit_suffix" />
        </TableRow>
    </TableLayout>
</layout>